force-app/main/default/objects/Sample_Line_Item__c/Sample_Line_Item__c.object-meta.xml
<CustomObject>
    <label>Sample Line Item</label>
    <nameField>
        <displayFormat>SLI -{000000}</displayFormat>
        <label>Sample Line Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Sample Line Items</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>