force-app/main/default/objects/Sample_Line_Item__c/fields/Account_Segment__c.field-meta.xml
<CustomField>
    <fullName>Account_Segment__c</fullName>
    <formula>TEXT( Sample__r.Account__r.Account_Segment__c )</formula>
    <label>Account Segment</label>
    <type>Text</type>
</CustomField>