force-app/main/default/objects/Sample_Line_Item__c/fields/Actual_date_of_dispatch__c.field-meta.xml
<CustomField>
    <fullName>Actual_date_of_dispatch__c</fullName>
    <label>Actual date of dispatch</label>
    <type>Date</type>
</CustomField>