force-app/main/default/objects/Sample_Line_Item__c/fields/Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>Business_Unit__c</fullName>
    <formula>Owner:User.Division</formula>
    <label>Business Unit</label>
    <type>Text</type>
</CustomField>