force-app/main/default/objects/Sample_Line_Item__c/fields/CGST_Percent__c.field-meta.xml
<CustomField>
    <fullName>CGST_Percent__c</fullName>
    <label>CGST %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>