force-app/main/default/objects/Sample_Line_Item__c/fields/Current_Shelf_Life__c.field-meta.xml
<CustomField>
    <fullName>Current_Shelf_Life__c</fullName>
    <formula>IF( OPTIVA_Recipe__c != NULL, OPTIVA_Recipe__r.Shelf_Life__c , Product__r.Current_Shelf_Life__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Shelf Life</label>
    <type>Text</type>
</CustomField>