force-app/main/default/objects/Sample_Line_Item__c/fields/Customer_Feed_Back__c.field-meta.xml
<CustomField>
    <fullName>Customer_Feed_Back__c</fullName>
    <inlineHelpText>Summarise customer feedback here</inlineHelpText>
    <label>Customer Feed Back</label>
    <type>TextArea</type>
</CustomField>