force-app/main/default/objects/Sample_Line_Item__c/fields/Customer_Instructions__c.field-meta.xml
<CustomField>
    <fullName>Customer_Instructions__c</fullName>
    <label>Customer Instructions</label>
    <type>TextArea</type>
</CustomField>