force-app/main/default/objects/Sample_Line_Item__c/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <formula>IF( NOT(ISBLANK(Sample__r.Lead__c)), Sample__r.Lead__r.FirstName + &apos; &apos; + Sample__r.Lead__r.LastName,  Sample__r.Account__r.Name )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Name</label>
    <type>Text</type>
</CustomField>