force-app/main/default/objects/Sample_Line_Item__c/fields/Customer_Preferred_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Preferred_Name__c</fullName>
    <label>Customer Preferred Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>