force-app/main/default/objects/Sample_Line_Item__c/fields/Dispatch_Details__c.field-meta.xml
<CustomField>
    <fullName>Dispatch_Details__c</fullName>
    <label>Dispatch Details</label>
    <length>255</length>
    <type>Text</type>
</CustomField>