force-app/main/default/objects/Sample_Line_Item__c/fields/Distributer_Customer__c.field-meta.xml
<CustomField>
    <fullName>Distributer_Customer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Choose customer, only if this is secondary sale via a distributor</inlineHelpText>
    <label>Distributer Customer</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sample Line Items</relationshipLabel>
    <relationshipName>Sample_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>