force-app/main/default/objects/Sample_Line_Item__c/fields/Division__c.field-meta.xml
<CustomField>
    <fullName>Division__c</fullName>
    <formula>Owner:User.Division</formula>
    <label>Division</label>
    <type>Text</type>
</CustomField>