force-app/main/default/objects/Sample_Line_Item__c/fields/Exclusive_customer_product_code__c.field-meta.xml
<CustomField>
    <fullName>Exclusive_customer_product_code__c</fullName>
    <label>Exclusive customer product code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>