force-app/main/default/objects/Sample_Line_Item__c/fields/Expected_Shelf_Life__c.field-meta.xml
<CustomField>
    <fullName>Expected_Shelf_Life__c</fullName>
    <label>Expected Shelf Life</label>
    <length>255</length>
    <type>Text</type>
</CustomField>