force-app/main/default/objects/Sample_Line_Item__c/fields/First_Sample_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>First_Sample_Due_Date__c</fullName>
    <label>First Sample Due Date</label>
    <type>Date</type>
</CustomField>