force-app/main/default/objects/Sample_Line_Item__c/fields/Formula_Packaging_Qty__c.field-meta.xml
<CustomField>
    <fullName>Formula_Packaging_Qty__c</fullName>
    <formula>TEXT(ROUND(Quantity__c / Packaging_Quantity__c ,2)) + &apos; &apos; + TEXT( Quantity_Unit__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Formula Packaging Qty</label>
    <type>Text</type>
</CustomField>