force-app/main/default/objects/Sample_Line_Item__c/fields/Freight_Value__c.field-meta.xml
<CustomField>
    <fullName>Freight_Value__c</fullName>
    <label>Freight Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>