force-app/main/default/objects/Sample_Line_Item__c/fields/IGSTC_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGSTC_Amount__c</fullName>
    <label>IGSTC Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>