force-app/main/default/objects/Sample_Line_Item__c/fields/Lead_Time_In_days__c.field-meta.xml
<CustomField>
    <fullName>Lead_Time_In_days__c</fullName>
    <formula>Product__r.Lead_Time_In_days__c</formula>
    <label>Lead Time - In days</label>
    <type>Text</type>
</CustomField>