force-app/main/default/objects/Sample_Line_Item__c/fields/Line_Item_Name__c.field-meta.xml
<CustomField>
    <fullName>Line_Item_Name__c</fullName>
    <formula>Product__r.Name + Project_Quotient__r.Name + OPTIVA_Recipe__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Line Item Name</label>
    <type>Text</type>
</CustomField>