force-app/main/default/objects/Sample_Line_Item__c/fields/Mfg_Date__c.field-meta.xml
<CustomField>
    <fullName>Mfg_Date__c</fullName>
    <label>Mfg Date</label>
    <type>Date</type>
</CustomField>