force-app/main/default/objects/Sample_Line_Item__c/fields/MOQ_Product__c.field-meta.xml
<CustomField>
    <fullName>MOQ_Product__c</fullName>
    <formula>Product__r.MOQ_Product__c</formula>
    <label>MOQ Product</label>
    <type>Text</type>
</CustomField>