force-app/main/default/objects/Sample_Line_Item__c/fields/OPTIVA_Recipe__c.field-meta.xml
<CustomField>
    <fullName>OPTIVA_Recipe__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>OPTIVA Recipe</label>
    <referenceTo>OPTIVA_Recipe__c</referenceTo>
    <relationshipLabel>Sample Line Items</relationshipLabel>
    <relationshipName>Sample_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>