force-app/main/default/objects/Sample_Line_Item__c/fields/Packaging_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Quantity__c</fullName>
    <label>Packaging Quantity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>