force-app/main/default/objects/Sample_Line_Item__c/fields/Packaging_Unit__c.field-meta.xml
<CustomField>
    <fullName>Packaging_Unit__c</fullName>
    <label>Packaging Unit</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>MG</fullName>
            </value>
            <value>
                <fullName>GM</fullName>
            </value>
            <value>
                <fullName>KG</fullName>
            </value>
            <value>
                <fullName>TONNE</fullName>
            </value>
            <value>
                <fullName>MT</fullName>
            </value>
            <value>
                <fullName>ML</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>