force-app/main/default/objects/Sample_Line_Item__c/fields/Plant_State__c.field-meta.xml
<CustomField>
    <fullName>Plant_State__c</fullName>
    <label>Plant State</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>States</valueSetName>
    </valueSet>
</CustomField>