force-app/main/default/objects/Sample_Line_Item__c/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <formula>IF( Product__r.ProductCode != null, Product__r.ProductCode,  IF(OPTIVA_Recipe__r.SSC_Code__c != null, 
    OPTIVA_Recipe__r.SSC_Code__c ,  Project_Quotient__r.SSC_Code__c ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Code</label>
    <type>Text</type>
</CustomField>