force-app/main/default/objects/Sample_Line_Item__c/fields/Product_Family__c.field-meta.xml
<CustomField>
    <fullName>Product_Family__c</fullName>
    <formula>IF( TEXT(Product__r.Family) != null, TEXT(Product__r.Family),  IF(TEXT( OPTIVA_Recipe__r.Recipe_Family__c )!= null, 
    TEXT( OPTIVA_Recipe__r.Recipe_Family__c ),  TEXT( Project_Quotient__r.Sample_Project_Application__r.Product_Family__c )) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Family</label>
    <type>Text</type>
</CustomField>