force-app/main/default/objects/Sample_Line_Item__c/fields/Product_Max_Qty__c.field-meta.xml
<CustomField>
    <fullName>Product_Max_Qty__c</fullName>
    <formula>Product__r.Max_sampling_Qty__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Max Qty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>