force-app/main/default/objects/Sample_Line_Item__c/fields/Product_Mfg_Date__c.field-meta.xml
<CustomField>
    <fullName>Product_Mfg_Date__c</fullName>
    <formula>IF(NOT( ISBLANK(Product__c ) ) ,  Product__r.Mfg_Date__c , IF(NOT( ISBLANK( OPTIVA_Recipe__c ) ) ,   OPTIVA_Recipe__r.Mfg_Date__c , IF(NOT( ISBLANK( Project_Quotient__c ) ) ,   Project_Quotient__r.Mfg_Date__c,  DATE(0, 0, 00)) ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Manufacturing Date</label>
    <type>Date</type>
</CustomField>