force-app/main/default/objects/Sample_Line_Item__c/fields/Product_Name__c.field-meta.xml
<CustomField>
    <fullName>Product_Name__c</fullName>
    <formula>IF( Product__r.Name!= null, Product__r.Name,  IF(OPTIVA_Recipe__r.Name!= null, 
    OPTIVA_Recipe__r.Name,  Project_Quotient__r.Name) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Product Name</label>
    <type>Text</type>
</CustomField>