force-app/main/default/objects/Sample_Line_Item__c/fields/Project_Quotient__c.field-meta.xml
<CustomField>
    <fullName>Project_Quotient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project Quotient</label>
    <referenceTo>Project_Quotient__c</referenceTo>
    <relationshipLabel>Sample Line Items</relationshipLabel>
    <relationshipName>Sample_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>