force-app/main/default/objects/Sample_Line_Item__c/fields/Qty_in_KGs__c.field-meta.xml
<CustomField>
    <fullName>Qty_in_KGs__c</fullName>
    <label>Qty in KGs</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>