force-app/main/default/objects/Sample_Line_Item__c/fields/Quantity_In_Grams__c.field-meta.xml
<CustomField>
    <fullName>Quantity_In_Grams__c</fullName>
    <formula>IF( ISPICKVAL(Quantity_Unit__c , &apos;KG&apos;) , Quantity__c * 1000,  
IF(ISPICKVAL(Quantity_Unit__c , &apos;GM&apos;), Quantity__c ,  IF( ISPICKVAL(Quantity_Unit__c, &apos;ML&apos;) , Quantity__c * 1,  IF( ISPICKVAL(Quantity_Unit__c , &apos;TONNE&apos;) , Quantity__c * 1000000 ,  IF( ISPICKVAL(Quantity_Unit__c, &apos;MT&apos;) , Quantity__c * 1000000 ,  IF( ISPICKVAL(Quantity_Unit__c , &apos;EA&apos;) , Quantity__c * 1000000000000000000 , 0) ) ) ) )  )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Quantity In Grams</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>