force-app/main/default/objects/Sample_Line_Item__c/fields/RAD__c.field-meta.xml
<CustomField>
    <fullName>RAD__c</fullName>
    <label>RAD</label>
    <length>255</length>
    <type>Text</type>
</CustomField>