force-app/main/default/objects/Sample_Line_Item__c/fields/Rate_Per_100_G__c.field-meta.xml
<CustomField>
    <fullName>Rate_Per_100_G__c</fullName>
    <label>Rate Per 100 G</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>