force-app/main/default/objects/Sample_Line_Item__c/fields/Reason_For_Rejection__c.field-meta.xml
<CustomField>
    <fullName>Reason_For_Rejection__c</fullName>
    <label>Reason For Rejection</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Competitor Product</fullName>
            </value>
            <value>
                <fullName>No further requirement</fullName>
            </value>
            <value>
                <fullName>Admin Closure: Opportunity Date exceeded the Current Date</fullName>
            </value>
            <value>
                <fullName>Not In priority now</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>