force-app/main/default/objects/Sample_Line_Item__c/fields/Regulatory_Requirements__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Requirements__c</fullName>
    <formula>IF( OPTIVA_Recipe__c != NULL , OPTIVA_Recipe__r.Regulatory__c , Product__r.Regulatory__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Regulatory Requirements</label>
    <type>Text</type>
</CustomField>