force-app/main/default/objects/Sample_Line_Item__c/fields/Release_Status__c.field-meta.xml
<CustomField>
    <fullName>Release_Status__c</fullName>
    <label>Release Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Released</fullName>
            </value>
            <value>
                <fullName>Cancelled</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>