force-app/main/default/objects/Sample_Line_Item__c/fields/Release_to_Dispatch_Team__c.field-meta.xml
<CustomField>
    <fullName>Release_to_Dispatch_Team__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Release to Dispatch Team</label>
    <type>Checkbox</type>
</CustomField>