force-app/main/default/objects/Sample_Line_Item__c/fields/Remarks_Prod_MOQ__c.field-meta.xml
<CustomField>
    <fullName>Remarks_Prod_MOQ__c</fullName>
    <formula>Product__r.Remarks_MOQ_LT__c</formula>
    <label>Remarks Prod MOQ</label>
    <type>Text</type>
</CustomField>