force-app/main/default/objects/Sample_Line_Item__c/fields/Sample__c.field-meta.xml
<CustomField>
    <fullName>Sample__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Sample Line Items</relationshipLabel>
    <relationshipName>Sample_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>