force-app/main/default/objects/Sample_Line_Item__c/fields/Sample_Assignment_Team__c.field-meta.xml
<CustomField>
    <fullName>Sample_Assignment_Team__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sample Assignment Team</label>
    <referenceTo>Sample_Assignment_Team__c</referenceTo>
    <relationshipLabel>Sample Line Items</relationshipLabel>
    <relationshipName>Sample_Line_Items</relationshipName>
    <type>Lookup</type>
</CustomField>