force-app/main/default/objects/Sample_Line_Item__c/fields/Sample_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Delivery_Date__c</fullName>
    <label>Sample Delivery Date</label>
    <type>Date</type>
</CustomField>