force-app/main/default/objects/Sample_Line_Item__c/fields/Sample_Request_Status__c.field-meta.xml
<CustomField>
    <fullName>Sample_Request_Status__c</fullName>
    <label>Sample Request Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
                <default>true</default>
                <label>New</label>
            </value>
            <value>
                <fullName>Submitted for Sampling</fullName>
            </value>
            <value>
                <fullName>Sample Dispatched</fullName>
            </value>
            <value>
                <fullName>Sample Received By Client</fullName>
            </value>
            <value>
                <fullName>Sample Accepted</fullName>
            </value>
            <value>
                <fullName>Sample Rejected</fullName>
            </value>
            <value>
                <fullName>Need Amendments</fullName>
            </value>
            <value>
                <fullName>Application Accepted</fullName>
                <isActive>false</isActive>
                <label>Application Accepted</label>
            </value>
            <value>
                <fullName>Application Project Ready</fullName>
                <isActive>false</isActive>
                <label>Application Project Ready</label>
            </value>
            <value>
                <fullName>Application Rejected</fullName>
                <isActive>false</isActive>
                <label>Application Rejected</label>
            </value>
            <value>
                <fullName>Approved by R&amp;D</fullName>
                <isActive>false</isActive>
                <label>Approved by R&amp;D</label>
            </value>
            <value>
                <fullName>Forwarded Sample Detail to Client</fullName>
                <isActive>false</isActive>
                <label>Forwarded Sample Detail to Client</label>
            </value>
            <value>
                <fullName>Project Accepted</fullName>
                <isActive>false</isActive>
                <label>Project Accepted</label>
            </value>
            <value>
                <fullName>Project Ready to Dispatch</fullName>
                <isActive>false</isActive>
                <label>Project Ready to Dispatch</label>
            </value>
            <value>
                <fullName>Project Rejected</fullName>
                <isActive>false</isActive>
                <label>Project Rejected</label>
            </value>
            <value>
                <fullName>Rejected by R&amp;D</fullName>
                <isActive>false</isActive>
                <label>Rejected by R&amp;D</label>
            </value>
            <value>
                <fullName>Sample Ready to Dispatch</fullName>
                <isActive>false</isActive>
                <label>Sample Ready to Dispatch</label>
            </value>
            <value>
                <fullName>Submitted for Application</fullName>
                <isActive>false</isActive>
                <label>Submitted for Application</label>
            </value>
            <value>
                <fullName>Submitted for Project</fullName>
                <isActive>false</isActive>
                <label>Submitted for Project</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>