force-app/main/default/objects/Sample_Line_Item__c/fields/Sample_Submitted_Date__c.field-meta.xml
<CustomField>
    <fullName>Sample_Submitted_Date__c</fullName>
    <formula>Sample__r.Sample_Submitted_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Submitted Date</label>
    <type>Date</type>
</CustomField>