force-app/main/default/objects/Sample_Line_Item__c/fields/Sample_Type__c.field-meta.xml
<CustomField>
    <fullName>Sample_Type__c</fullName>
    <formula>IF( OR( ISBLANK( Sample__c ), ISNULL(Sample__c)) , &apos;SAMPLE&apos;, &apos;PROJECT SAMPLE&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sample Type</label>
    <type>Text</type>
</CustomField>