force-app/main/default/objects/Sample_Line_Item__c/fields/Sampling_Price__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Price__c</fullName>
    <label>Sampling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>