force-app/main/default/objects/Sample_Line_Item__c/fields/Sampling_Price_Formula__c.field-meta.xml
<CustomField>
    <fullName>Sampling_Price_Formula__c</fullName>
    <formula>IF( Product__r.Sampling_Price__c != null, Product__r.Sampling_Price__c , IF(OPTIVA_Recipe__r.Sampling_Price__c != null,
OPTIVA_Recipe__r.Sampling_Price__c ,  VALUE($Label.Default_Sampling_Price)  ) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sampling Price Formula</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>