force-app/main/default/objects/Sample_Line_Item__c/fields/SGST_Percent__c.field-meta.xml
<CustomField>
    <fullName>SGST_Percent__c</fullName>
    <label>SGST %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>