force-app/main/default/objects/Sample_Line_Item__c/fields/SLI_Dispatched__c.field-meta.xml
<CustomField>
    <fullName>SLI_Dispatched__c</fullName>
    <defaultValue>false</defaultValue>
    <label>SLI Dispatched?</label>
    <type>Checkbox</type>
</CustomField>