force-app/main/default/objects/Sample_Line_Item__c/fields/SSC_Code__c.field-meta.xml
<CustomField>
    <fullName>SSC_Code__c</fullName>
    <formula>OPTIVA_Recipe__r.SSC_Code__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>SSC Code</label>
    <type>Text</type>
</CustomField>