force-app/main/default/objects/Sample_Line_Item__c/fields/Taxable_Value__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Value__c</fullName>
    <formula>Value__c  +  Freight_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Taxable Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>