force-app/main/default/objects/Sample_Line_Item__c/fields/Total_GST_Amount__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_Amount__c</fullName>
    <formula>CGST_Amount__c  +  SGST_Amount__c  +  IGSTC_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GST Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>