force-app/main/default/objects/Sample_Line_Item__c/fields/Total_GST_Percent__c.field-meta.xml
<CustomField>
    <fullName>Total_GST_Percent__c</fullName>
    <formula>IF( NOT(ISBLANK(Product__r.HSN_TAX__c))  , Product__r.HSN_TAX__c * 100 ,  VALUE($Label.Default_GST ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total GST %</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>