force-app/main/default/objects/Sample_Line_Item__c/fields/Way_Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Way_Bill_No__c</fullName>
    <label>Way Bill No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>