force-app/main/default/objects/Sample_Line_Item__c/validationRules/Reason_for_Rejection_is_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Reason_for_Rejection_is_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
    
    ISPICKVAL( Sample_Request_Status__c , &apos;Sample Rejected&apos;), 
    ISPICKVAL(Reason_For_Rejection__c, &apos;&apos;) 
)</errorConditionFormula>
    <errorMessage>Please mention rejection reason.</errorMessage>
</ValidationRule>