force-app/main/default/objects/Sample_Line_Item__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Product_Family__c</columns>
    <columns>Sample_Submitted_Date__c</columns>
    <columns>Sample_Request_Status__c</columns>
    <columns>Customer_Name__c</columns>
    <columns>Product__c</columns>
    <columns>Product_Code__c</columns>
    <columns>Quantity__c</columns>
    <columns>Packaging_Unit__c</columns>
    <columns>Packaging_Quantity__c</columns>
    <columns>Contact__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>